<resources>
    <string name="app_name">JsonPlaceHolder</string>
    <string name="hint_id">User ID</string>
    <string name="search_id">Search user by ID</string>
    <string name="add_user">Add a new user</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="title">User data</string>
    <string name="no_id">You must enter a valid user ID</string>
    <string name="address_two_lines">%1s %2s\n%3s %4s</string>
    <string name="no_result">It was not possible to complete the requested operation.</string>
    <string name="unexpected">An unexpected problem occurred.</string>
    <string name="user_not_found">There is no user with the provided ID</string>
    <string name="no_internet">Connection to Intenet is not available</string>
</resources>